--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 
 .left {
     height: 100vh;
-    width: 33%;
+    max-width: 400px;
     background-image: url("images/halie-west-25xggax4bSA-unsplash.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -41,6 +41,7 @@ body {
 }
 
 .left_logo {
+    padding: 0 50px;
     margin-top: 100px;
     display: flex;
     justify-content: center;
@@ -58,4 +59,25 @@ body {
     font-family: "myCustomFont";
     color: white;
     font-size: 6em;
+}
+
+.right {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.right_intro {
+    background-color: rgb(236, 236, 236);
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    gap: 20px;
+    padding: 50px 20px;
+}
+
+.right_intro h3 {
+    padding: 0;
+    font-weight: bold;
 }
