--- a/styles.css
+++ b/styles.css
@@ -9,17 +9,22 @@
 
 * {
     box-sizing: border-box;
-    margin: 0;
     padding: 0;
+    margin: 0;
 }
 
 body {
     display: flex; 
 }
 
-.left {
+.left, .right {
     height: 100vh;
-    max-width: 400px;
+}
+
+/*Image/logo section*/
+
+.left {
+    width: 500px;
     background-image: url("images/halie-west-25xggax4bSA-unsplash.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -62,22 +67,80 @@ body {
 }
 
 .right {
-    width: 100%;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    background-color: rgb(242, 242, 242);
 }
 
+/*Intro section*/
+
 .right_intro {
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(242, 242, 242);
     display: flex;
     flex-direction: column;
     justify-content: left;
     gap: 20px;
-    padding: 50px 20px;
+    padding: 30px;
 }
 
 .right_intro h3 {
     padding: 0;
     font-weight: bold;
+}
+
+/*Form section*/
+
+#right_form {
+    background-color: rgb(253, 253, 253);
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 30px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.right_form-row {
+    display: flex;
+    gap: 75px;
+}
+
+.right_form-column {
+    display: flex;
+    flex-direction: column;
+}
+
+/*create account section*/
+
+.right_account {
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    gap: 15px;
+}
+
+button {
+    align-self: flex-start;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 1em;
+    background-color: rgb(98, 133, 28);
+    border: 1px solid rgb(98, 133, 28);
+    color: rgb(253, 253, 253);
+    border-radius: 6px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+    background-color: rgb(124, 168, 35);  
+}
+
+.right_account a {
+    text-decoration: none;
+    color: rgb(74, 101, 21);
+}
+
+.right_account a:hover {
+    text-decoration: underline;
 }
