--- a/styles.css
+++ b/styles.css
@@ -144,3 +144,32 @@ button:hover {
 .right_account a:hover {
     text-decoration: underline;
 }
+
+/*inputs*/
+
+input {
+    font-size: 16px;
+    padding: 10px;
+    width: 200px;
+    height: 30px;
+    border: 1px solid black;
+    border-radius: 4px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+input:focus {
+    border: 1px solid  rgb(94, 94, 228);
+    box-shadow: 0 2px 5px  rgb(94, 94, 228);
+    outline: none;
+}
+
+/*validations*/
+
+input [type="password"]:invalid {
+    border-color: red;
+}
+
+input [type="password"]:valid {
+    border-color: green;
+}
